# pruneshift-public

./: .gitignore~  .~lock.setup.cfg#  README.md  baseline_augmix.sh  baseline_augmix.sh.e2381648  configs.yaml  no_kd_baseline_augmix.sh  no_kd_baseline_augmix.sh.e2381649  readme.md  requirements.txt  resnet56.sh  setup.cfg  setup.py
.hydra/: config.yaml  hydra.yaml  overrides.yaml
configs/: oneshot_cifar10.gin
experiments/: cli.py  oneshot.py  train.py  try_click.py
experiments/cifar10/: cifar10.py  run.py
experiments/config/: main.yaml
experiments/debug_hydra/: config.yaml  debug_hydra.py
experiments/oneshot/: oneshot.py
experiments/train/: config.yaml  train.py
jupyter/: Untitled.ipynb  distribution_shift.ipynb  hydra.ipynb  prune.ipynb  trying_prune.ipynb
pruneshift/: Untitled.ipynb  __init__.py  run.py
pruneshift/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pruneshift/config/: config.yaml
pruneshift/data/: datamodule.py  datasets.py
pruneshift/experiments/: basic.py  config.yaml
pruneshift/models/: modules.py  topology.py
pruneshift/prune/: strategies.py  utils.py
src/: cifar_resnet.py
src/SupCon/: losses.py
src/augmix/: dataset.py
src/cifar10_models/: __init__.py  googlenet.py  inception.py  mobilenetv2.py  resnet.py  vgg.py
src/crd/: criterion.py  memory.py
src/dgen/: data.py  model.py  trainer.py
src/models/: .resnet.py.swp  __init__.py  __init__3.py  resnet.py  (+3 more)
tensorboard/: events.out.tfevents.1623166227.nicky.1996.0  events.out.tfevents.1626794585.dlcgpu02.2541866.0  events.out.tfevents.1626794601.dlcgpu02.2542644.0
(+210 files in other folders)
