[metadata]
name = pruneshift
version = 0.1

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
install_requires =
    pandas
    torch
    torchvision
    numpy
    pytorch_lightning
    click

[options.entry_points]
console_scripts = 
    pruneshift = src.pruneshift._cli:cli

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
