[metadata]
name = pruneshift
version = 0.1

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
install_requires =
    pandas
    torch
    torchvision
    numpy
    pytorch_lightning
    hydra-core

[options.entry_points]
console_scripts = 
    ps_oneshot=pruneshift.scripts.oneshot:oneshot
    ps_train=pruneshift.scripts.train:train
    ps_prune=pruneshift.scripts.prune_n_tune:prune_n_tune
    ps_convert=pruneshift.scripts.convert:convert

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
